--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id "com.vanniktech.maven.publish"
-    id "org.jetbrains.dokka"
 }
 
 android {
@@ -60,7 +59,7 @@ tasks.withType(KotlinCompile).configureEach{
 mavenPublishing {
     coordinates("io.github.shawxingkwok", "android-util-view", "1.0.0-SNAPSHOT")
     pom {
-        name = "Android view util"
+        name = "AndroidUtil-view"
         description = ""
         inceptionYear = "2023"
     }
