--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,6 +12,7 @@ android {
 
     defaultConfig {
         minSdk 21
+        //noinspection OldTargetApi
         targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
