--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "AndroidUtil-View"
-include ':demo'
 include ':api'
+include ':sample'
