--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,7 @@
-buildscript {
-    ext{
-        version_kt = '1.8.0'
-    }
-}
-
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version "$version_kt" apply false
+    id 'org.jetbrains.kotlin.android' version "1.8.0" apply false
     id "com.vanniktech.maven.publish" version "0.25.2" apply false
     id "org.jetbrains.dokka" version "1.7.20" apply false
 }
