--- a/api/build.gradle
+++ b/api/build.gradle
@@ -62,7 +62,7 @@ mavenPublishing {
     def version = "1.0.0"
     def isSnapshot = false
 
-    if (isSnapshot) version += "SNAPSHOT"
+    if (isSnapshot) version += "-SNAPSHOT"
     pom {
         coordinates("io.github.shawxingkwok", artifactId, version)
         def repoName = "AndroidUtil-View"
