--- a/api/build.gradle
+++ b/api/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.6.1'
 }
 
 dependencies {
@@ -61,7 +62,7 @@ tasks.withType(KotlinCompile).configureEach{
 // publish
 mavenPublishing {
     def artifactId = "android-util-view"
-    def version = "1.0.5"
+    def version = "1.0.6"
     def isSnapshot = false
 
     if (isSnapshot) version += "-SNAPSHOT"
